--- a/README.org
+++ b/README.org
@@ -7,13 +7,18 @@
    Currently pre-compiled packages are not provided, so you have to
    compile it by yourself.
 
-   Shadowsocks-tiny depends on libopenssl, so you have to install
-   libopenssl on your router first.
-
    - Compile from SDK
 
      There is a help page about using the SDK:
-     [[http://wiki.openwrt.org/doc/howto/obtain.firmware.sdk[]]
+     [[http://wiki.openwrt.org/doc/howto/obtain.firmware.sdk]]
+
+     Shadowsocks-tiny depends on libopenssl. If libopenssl has not
+     been installed on your router, you have to install libopenssl
+     first. Usually you only need to run following command on your
+     router to install libopenssl:
+     #+begin_src shell
+     opkg install libopenssl
+     #+end_src
 
      Packages are under =packages= directory of the shadowsocks-tiny
      source code. =./packages/shadowsocks-client-AA= is for Attitude
@@ -26,8 +31,10 @@
    - Compile from OpenWrt souce
 
      You can add shadowsocks-client from packages feed:
-     =./scripts/feeds update packages=
-     =./scripts/feeds install shadowsocks-client=
+     #+begin_src shell
+     ./scripts/feeds update packages
+     ./scripts/feeds install shadowsocks-client
+     #+end_src
 
      Then select shadowsocks-client from =make menuconfig= and compile.
 
@@ -39,15 +46,16 @@
    start= to execute sslocal, and use =logread= to see if it works.
    Normally it will show:
 
-   =Wed Jul 16 03:17:28 2014 daemon.notice sslocal: server address: XXX.XXX.XXX.XXX:XXXXX(tcp)=
-   =Wed Jul 16 03:17:28 2014 daemon.notice sslocal: listening address: XXX.XXX.XXX.XXX:XXXXX(tcp)=
+   Wed Jul 16 03:17:28 2014 daemon.notice sslocal: server address: XXX.XXX.XXX.XXX:XXXXX(tcp)
+
+   Wed Jul 16 03:17:28 2014 daemon.notice sslocal: listening address: XXX.XXX.XXX.XXX:XXXXX(tcp)
 
    If all seem okay, run =/etc/init.d/sslocal enable= to let
    shadowsocks-client automatically starts when your router boots.
 
 ** Report bugs
    Please submit your bug report to
-   [[https://github.com/zhao-gang/shadowsocks-tiny/issues][]].
+   [[https://github.com/zhao-gang/shadowsocks-tiny/issues]]
 
 ** License
    MIT, see COPYING for details.
